# MultisensoryHubHeatMap

./: .gitignore  OVERVIEW.md  PLAN.md  README.md  dev.sqlite3  manage.py  pyproject.toml
concept_analytics/: admin.py  apps.py  bot_detection.py  conf.py  manifest_sync.py  models.py  tasks.py  urls.py  validators.py
concept_analytics/management/commands/: import_manifest.py  purge_old_events.py  refresh_concept_analytics_summaries.py
concept_analytics/migrations/: 0001_initial.py  0002_alter_analyticsevent_options.py  0003_manifestsyncstate.py  0004_add_report_name.py
concept_analytics/static/concept_analytics/: dashboard.css
concept_analytics/templates/concept_analytics/dashboard/: base.html  heatmap.html
concept_analytics/views/: dashboard.py  ingest.py  public_summary.py
dev_project/: settings.py  urls.py  views.py
frontend/: jest.config.js  package-lock.json  package.json
frontend/src/: AnalyticsProvider.jsx  ErrorBoundary.jsx  TrackedBlock.jsx  constants.js  tracker.js
frontend/src/__tests__/: TrackedBlock.test.jsx  tracker.test.js
frontend/src/hooks/: useRouteAnalytics.js
scripts/: manifest_tools.py
tests/: settings_test.py  test_bot_detection.py  test_dashboard.py  test_import.py  test_ingest.py  test_management_commands.py  test_manifest_sync.py  test_manifest_tools.py  test_models.py  test_public_summary.py  test_validators.py  urls.py
