[build-system]
requires = ["setuptools>=68", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "concept-analytics"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2",
    "django-cors-headers>=4.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings_test"
