[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "concept-analytics"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2",
    "django-cors-headers>=4.0",
]

[tool.setuptools.packages.find]
include = ["concept_analytics*"]

[tool.setuptools.package-data]
concept_analytics = ["templates/**/*.html", "templates/**/*.txt", "static/**/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings_test"
